# futuram-ontology

./: .gitignore  README.md  config.json  docker-compose.yml  pyproject.toml
bench/: README.md  analyze_run.py  docker-compose.bench.yml  down.sh  futuram_examples_composition.ttl  futuram_void_composition.ttl  gen_void_composition.py  index_classes.py  leak_check.py  make_error_yaml.py  materialize_types.py  mcp_with_skills.py  providers.json  run.sh  run_bench.py  run_time_bench.sh  settings.bench.json  table_stats.py  up.sh  verify_taxonomy_fq.py
consistency/: Dockerfile  README.md  compose.yml
data/: endpoints_metadata.json
docs/: architecture.md
fuseki/: Dockerfile  config.ttl  entrypoint.sh
ontology/: Dockerfile
query-detail-solutions/: verify_domain_queries.py
rules/: check-mass-conservation.rq  complete-chains.rq  infer-class-composition.rq  propagate-granular.rq  reconcile-coarse-fine.rq
scripts/: audit_hierarchy_abox.py  check_tbox_term_availability.py  ci_release_assets.py  download_zenodo.py  enrich_hierarchy_abox.py  extract_chebi_module.sh  extract_hierarchy.py  freeze_oracle.py  gather_docs_and_comments.py  gen_sample.py  gen_void.py  robot_consistency.py  scaling_bench.py  scaling_to_word.py
shapes/: composition-query-shapes.ttl  composition-statement-shapes.ttl  hierarchy-abox-shapes.ttl  hierarchy-label-shapes.ttl  item-mass-shapes.ttl  time-strategy-shapes.ttl
sparql-llm/: .env.example  Dockerfile  README.md  futuram_examples.ttl  futuram_void.ttl  futuram_void_composition.ttl  patch_extract_retry.py  patch_validate_void.py  render_settings.sh  settings.docker.json  settings.json  settings.poc.json
tests/: README.md  TEST-PLAN.md  build_instances.py  chain_from_doc.py  conftest.py  golden.py  scenarios.py  served.py  test_bench_guards.py  test_bench_iri_answers.py  test_bench_llm_adapters.py  (+30 more)
(+312 files in other folders)
